# libls

./: README.md  meson.build  meson_options.txt  test.sh  update_format.sh
src/: array.c  array.h  core.c  libls.h  list.c  list.h  macros.h  main.c  map.c  map.h  meson.build  ptr-array.c  ptr-array.h  util.h
tests/: check-array.c  check-core.c  check-list.c  check-map.c  meson.build
